# cwru_davinci_kinematics

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  package.xml
config/: DH_parameters_recommendation.txt  dh_info_format.yaml  psm1_dh.yaml  psm1_dh_sim.yaml  psm2_dh.yaml  psm2_dh_param_archive.yaml  psm_1_dh_param_archive.yaml  psm_generic.yaml
config/good_config_bkp/20180723/: psm1_dh.yaml  psm2_dh.yaml
examples/: davinci_fwd_fix_trial.cpp  davinci_fwd_kinematics_demo.cpp  davinci_ik_refined_test.cpp  davinci_inv_kinematics_demo.cpp  davinci_jacobian_demo.cpp  davinci_jacobian_test_rn.cpp  one_to_many_demo.cpp  psm1_intrinsic_calibration_auxiliary.cpp  psm2_intrinsic_calibration_auxiliary.cpp  psm_intrinsic_calibration_auxiliary.cpp  test_dh_345.cpp  test_dh_params.cpp  test_new_ik_err.cpp
include/cwru_davinci_kinematics/: davinci_fwd_kinematics.h  davinci_inv_kinematics.h  davinci_joint_publisher.h  davinci_kinematic_definitions.h  davinci_kinematics.h  davinci_kinematics_preprocessor.h
include/davinci_kinematics/: davinci_fwd_kinematics.h  davinci_inv_kinematics.h  davinci_kinematic_definitions.h
include/davinci_kinematics_cuda/: davinci_fwd_kinematics.cuh  davinci_inv_kinematics.cuh  davinci_kinematic_definitions.cuh
src/: davinci_Jacobian_test_main.cpp  davinci_fwd_kinematics.cpp  davinci_fwd_kinematics.cu  davinci_inv_kinematics.cpp  davinci_inv_kinematics.cu  davinci_kinematic_definitions.cpp  davinci_kinematic_definitions.cu  davinci_kinematics.cpp  davinci_kinematics_test_main.cpp  davinci_kinematics_test_main2.cpp
test/: full_kinematics.cpp  test_full_kinematics.cpp
